traefik/inspiring-quotes-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspiring-quotes-web-ingress
  namespace: inspiring-quotes-web
spec:
  ingressClassName: traefik
  rules:
  - host: quotes.alta.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inspiring-quotes-web
            port:
              number: 80
